--- a/ProgramacionOrientadaAObjetos.csproj
+++ b/ProgramacionOrientadaAObjetos.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAritmetica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAritmetica.Designer.cs">
+      <DependentUpon>FormAritmetica.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTrianguloAct3.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAritmetica.resx">
+      <DependentUpon>FormAritmetica.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTrianguloAct3.resx">
       <DependentUpon>FormTrianguloAct3.cs</DependentUpon>
