--- a/ProgramacionOrientadaAObjetos.csproj
+++ b/ProgramacionOrientadaAObjetos.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormAritmetica.Designer.cs">
       <DependentUpon>FormAritmetica.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormEncuesta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEncuesta.Designer.cs">
+      <DependentUpon>FormEncuesta.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormFibonacci.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAritmetica.resx">
       <DependentUpon>FormAritmetica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEncuesta.resx">
+      <DependentUpon>FormEncuesta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormFormulaGeneral.resx">
       <DependentUpon>FormFormulaGeneral.cs</DependentUpon>
