--- a/ProgramacionOrientadaAObjetos.csproj
+++ b/ProgramacionOrientadaAObjetos.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormAritmetica.Designer.cs">
       <DependentUpon>FormAritmetica.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCatalogo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCatalogo.Designer.cs">
+      <DependentUpon>FormCatalogo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormEncuesta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAritmetica.resx">
       <DependentUpon>FormAritmetica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCatalogo.resx">
+      <DependentUpon>FormCatalogo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormEncuesta.resx">
       <DependentUpon>FormEncuesta.cs</DependentUpon>
